*Empty MediaWiki Message*

--- a/Tind.mw
+++ b/Tind.mw
@@ -1,6 +1,14 @@
+[[Fail:Tynda from right-bank.jpg|thumb|right|325px|Nägu lidnha]]
 '''Tind''' ([[Venäkel'|ven.]]: ''Тында'') om lidn [[Venäma|Venämas]], [[Amuran agj|Amuran agjas]].
+
+Tindad kuctas «[[Baikalan-Amuran magistral'|BAM:an]] pälidnaks».
+
+== Irdkosketused ==
+* [http://gorod.tynda.ru/ Tindan oficialine sait]
+
 {{stub}}
 
+[[Kategorii:Amuran agj]]
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
