*Empty MediaWiki Message*

--- a/Kargopol'.mw
+++ b/Kargopol'.mw
@@ -1,5 +1,43 @@
-'''Kargopol'''' ([[Venäkel'|ven.]]: ''Каргополь'') om lidn [[Venäma]]s, [[Arhangel'skan agj]]as.
+{{Eländpunkt
+ | Nimi = Kargopol'<br />Каргополь
+ | Lidnanznam = Kargopol coat of arms.png
+ | Flag =
+ | Lidnanznam text = Kargopolen znam
+ | Flag text = Kargopolen flag
+ | Valdkund = Venäma
+ | Eläjiden lugu = 10,745)<ref name=gks2010>[http://www.gks.ru/bgd/regl/b10_109/IssWWW.exe/Stg//%3Cextid%3E/%3Cstoragepath%3E::|tabl-23-10.xls Venälaižen Federacijan kaikenaigaižen ristitišton lugu lidnoin, žiloin da rajonoin vl. 2010 vilukun 1. päivän]</ref>
+ | Voz' = 2010
+ | Pind = 13
+ | Fail = 
+ | Pämez' = Räbov Aleksandr Gurjevič
+ | Telefonkod = +7-81841
+ | Avtokod = 29
+ | Aigvö = [[UTC]]+4
+}}
+[[Fail:Соборная площадь 1.jpg|pisi|hura|250px|Kargopolen 17-den voz'sadan jumalanpertid čomitadud toštmatomal kivižel leiktandal]]
+'''Kargopol'''' ([[Venäkel'|ven]].: ''Каргополь'') om lidn (vspäi 1784) [[Venäma]]s, [[Arhangel'skan agj]]an ehtbokas. Se om [[Kargopolen rajon]]an administrativine keskuz da rajonan üks'jäine lidnkund.
+
+Lidn sijadase [[Oneg]]-jogen hural randal (jogedme om navigacii), 3 kilometras [[Lač]]-järvespäi, 78 km matkad lähembaižhe [[Nändom]]-raudtestancijahasai, mad 493 km [[Arhangel'sk]]ahasai. Distancii [[Moskv]]ahasai om läz 1000 km.
+
+== Transport ==
+Kargopolespäi om avtobusühtenzoituz [[Nändom]]anke, [[Pleseck]]anke, Konevo-žilonke, [[Arhangel'sk]]anke, [[Severodvinsk]]anke, a mugažo Kargopolen rajonan eländpunktoidenke.
+
+== Tetabad mehed sidoiš Kargopolenke ==
+* Baranov Aleksandr Andrejevič — venälaine torgovan, torguindfaktorijoiden alusenpanii [[Venälaine Amerik|Venälaižes Amerikas]], oli sündnu Kargopol'he
+* Gun'kin Genrih Pavlovič — kirjutai, kirjoiden Kargopoles agjas avtor
+* Gil'ferding Aleksandr Födorovič — venälaine slavižentedai, fol'kloran keradai, kolnu Kargopoles.
+
+== Sebruzlidnad ==
+{{RUS|#}} [[Otradnoje (Moskvan rajon)|Otradnoje]], [[Moskv]]an  rajon, [[Venäma]]
+
+== Homaičendad ==
+{{Reflist}}
+
+== Irdkosketused ==
+* [http://www.kargopol.ru/ru Lidnan oficialine sait]
+
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Arhangel'skan agj]]
