*Empty MediaWiki Message*

--- a/Kargopol'.mw
+++ b/Kargopol'.mw
@@ -17,7 +17,7 @@
 [[Fail:Соборная площадь 1.jpg|pisi|hura|250px|Kargopolen 17-den voz'sadan jumalanpertid čomitadud toštmatomal kivižel leiktandal]]
 '''Kargopol'''' ([[Venäkel'|ven]].: ''Каргополь'') om lidn (vspäi 1784) [[Venäma]]s, [[Arhangel'skan agj]]an ehtbokas. Se om [[Kargopolen rajon]]an administrativine keskuz da rajonan üks'jäine lidnkund.
 
-Lidn sijadase [[Oneg]]-jogen hural randal (jogedme om navigacii), 3 kilometras [[Lač]]-järvespäi, 78 km matkad lähembaižhe [[Nändom]]-raudtestancijahasai, mad 493 km [[Arhangel'sk]]ahasai. Distancii [[Moskv]]ahasai om läz 1000 km.
+Lidn sijadase [[Oneg-jogi|Oneg-jogen]] hural randal (jogedme om navigacii), 3 kilometras [[Lač]]-järvespäi, 78 km matkad lähembaižhe [[Nändom]]-raudtestancijahasai, mad 493 km [[Arhangel'sk]]ahasai. Distancii [[Moskv]]ahasai om läz 1000 km.
 
 == Transport ==
 Kargopolespäi om avtobusühtenzoituz [[Nändom]]anke, [[Pleseck]]anke, Konevo-žilonke, [[Arhangel'sk]]anke, [[Severodvinsk]]anke, a mugažo Kargopolen rajonan eländpunktoidenke.
