--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -16,6 +16,9 @@ Saksanmas<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+T
 * {{NLD}} — 4. sija<ref>http://www.top40.nl/zoeken?search=Modern+Talking</ref>
 * {{NOR}} — 3. sija<ref>http://www.norwegiancharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
 * {{ESP}} — 2. sija<ref>Salaverri, Fernando (September 2005). Sólo éxitos: año a año, 1959–2002 (1st ed.). Spain: Fundación Autor-SGAE. ISBN 84-8048-639-2.</ref>
+* {{SWE}} — 3. sija<ref>http://www.swedishcharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
+* {{CHE}} — 1. sija<ref>http://www.swisscharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
+* {{GBR}} — 56. sija<ref>http://www.chartstats.com/artistinfo.php?id=4358</ref>
 
 == Kacu mugažo ==
 * [[You're My Heart, You're My Soul '98]]
