*Empty MediaWiki Message*

--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -1,9 +1,9 @@
 __NOTOC__
-[[Fail:YoureMyHeartPiano.png|border|right|330px]]
-[[Fail:You're My Heart, You're My Soul (cover).jpeg|border|left|250px]]
-'''«You're My Heart, You're My Soul»''' (''Sinä oled minun südäikera, sinä oled minun heng'') om [[Modern Talking]]-kollektivan tetab pajo da ühtinnimine singl «[[The 1st Album]]»-al'bomas<ref>http://www.allmusic.com/album/r210962</ref>, kudamb om pästtud [[1984]]-žen voden [[29. reduku|redukun 29. päiväl]].<ref>http://www.modern-talking-online.de/singles.htm</ref> Se om gruppan debütine singl. Om änetud [[anglijan kel'|anglijan kelel]].
+[[Fail:YoureMyHeartPiano.png|thumb|right|350px|Pajon notgrafik [[fortepiano]]le da [[sintezator]]ale]]
+[[Fail:You're My Heart, You're My Soul (cover).jpeg|thumb|left|230px|Originaline singlankor']]
+'''«You're My Heart, You're My Soul»''' (''Sinä oled minun südäin, sinä oled minun heng'') om [[Modern Talking]]-kollektivan tetab pajo da ühtinnimine singl «[[The 1st Album]]»-al'bomas<ref>http://www.allmusic.com/album/r210962</ref>, kudamb om pästtud [[1984]]-žen voden [[29. reduku|redukun 29. päiväl]]<ref>http://www.modern-talking-online.de/singles.htm</ref>, [[BMG]]- da [[Hansa Records]]-leibloil.<ref>http://www.discogs.com/Modern-Talking-Youre-My-Heart-Youre-My-Soul/master/24417</ref> Se om gruppan debütine singl. Om änetud [[anglijan kel'|anglijan kelel]].
 
-Tekstan i muzikan tegii — [[Bolen Diter|Diter Bolen]] (hän oli Modern Talking:an ühtnii); siloi hän radoi ''Stiv Benson''-psevdonimal.<ref>http://www.bohlenworld.de/biography?language=en</ref> [[Leibl]]ad — [[BMG]] da [[Hansa Records]].
+Tekstan i muzikan tegii — [[Bolen Diter|Diter Bolen]] (hän oli Modern Talking:an ühtnii); siloi hän radoi ''Stiv Benson''-psevdonimal.<ref>http://www.bohlenworld.de/biography?language=en</ref>
 
 Kompozicii oli sur' satuz [[Evrop]]as. Pästandan aigen oli mödud enamb 8 millionad kopijad kaiked mail'madme.<ref>http://www.dw-world.de/dw/article/0,2144,776871,00.html</ref> Pajo oli ezmäižes sijas valdkundoiden rivin čartoiš (sidä kesken [[Saksanma]]s).<ref>http://www.musicline.de/de/chartverfolgung_summary/title/MODERN+TALKING/You%2527re+My+Heart%2Cyou%2527re+My+Soul/single</ref><ref>http://www.austriancharts.at/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref><ref>http://hitparade.ch/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
 
@@ -11,7 +11,17 @@ Saksanmas<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+T
 
 Muzikklip om fil'mdud [[Lüksemburg]]as, [[1984]]-žes vodes.<ref>http://www.bohlenworld.de/biography?language=en</ref>
 
-Pajon uz' versii, '''«[[You're My Heart, You're My Soul '98]]»''', oli pästtud [[1998]]-žen voden [[16. keväz'ku|keväz'kun 16. päiväl]]. Se oli populärine mugažo, i mülüti äjiden evropaližiden valdkundoiden hitparadoihe.<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+TALKING/single</ref><ref>http://www.swisscharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul+%2798&cat=s</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980406&x=12&y=16</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980413&x=39&y=15</ref> Uz' singlan pästand linni platinaižeks Saksanmas<ref>http://www.musikindustrie.de/gold_platin_datenbank/?action=suche&strTitel=You%27re+My+Heart%2C+You%27re+My+Soul&strInterpret=Modern+Talking&strTtArt=alle&strAwards=checked</ref> da kuldaižeks Francijas<ref>http://www.disqueenfrance.com/fr/page-259165.xml?year=1998&type=7</ref>.
+Pajon uz' versii, '''«[[You're My Heart, You're My Soul '98]]»''', oli pästtud [[1998]]-žen voden [[16. keväz'ku|keväz'kun 16. päiväl]], kut singl «[[Back for Good]]»-al'bomaspäi. Se oli populärine mugažo, i mülüti äjiden evropaližiden valdkundoiden hitparadoihe.<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+TALKING/single</ref><ref>http://www.swisscharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul+%2798&cat=s</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980406&x=12&y=16</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980413&x=39&y=15</ref> Uz' singlan pästand linni platinaižeks Saksanmas<ref>http://www.musikindustrie.de/gold_platin_datenbank/?action=suche&strTitel=You%27re+My+Heart%2C+You%27re+My+Soul&strInterpret=Modern+Talking&strTtArt=alle&strAwards=checked</ref> da kuldaižeks Francijas<ref>http://www.disqueenfrance.com/fr/page-259165.xml?year=1998&type=7</ref>.
+
+== Treklist ==
+
+=== 7" (Hansa 106 884) (BMG) 29.10.1984 ===
+# ''You're My Heart, You're My Soul'' (3:48)
+# ''You're My Heart, You're My Soul (Instrumental Version)'' (4:01)
+
+=== 12" (Hansa 601 496) (BMG) 29.10.1984 ===
+# ''You're My Heart, You're My Soul'' (5:35)
+# ''You're My Heart, You're My Soul (Instrumental Version)'' (4:01)
 
 == Čartografii ==
 * {{AUT}} — 1. sija<ref>http://www.austriancharts.at/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
