всё вроде... проверьте кто-нибудь

--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -36,6 +36,40 @@ Pajon uz' versii, '''«[[You're My Heart, You're My Soul '98]]»''', oli pästtu
 * {{CHE}} — 1. sija<ref>http://www.swisscharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
 * {{GBR}} — 56. sija<ref>http://www.chartstats.com/artistinfo.php?id=4358</ref>
 
+== Kaverad ==
+{|class="toptextcells"
+|
+* 1985: [[Roos Mari|Mari Roos]] („Ich bin stark nur mit dir“-nimel)
+* 1985: Creative Connection
+* 1985: Milchshake („Nur mit Quark wird man stark“-nimel)
+* 1985: Aleksa Leklr („Avec toi, contre toi“-nimel)
+* 1985: Riku („Ota kii“-nimel)
+* 1985: [[Seija Simola]] („Ota kii“-nimel)
+* 1986: Maja-Katrin Fritše
+* 1989: [[Hamperdink Engel'bert (pajatai)|Engel'bert Hamperdink]]
+* 1993: [[In My Rosary|Derrière Le Miroir]]
+|
+* 1997: Da Flow
+* 1997: St. Tropez
+* 1998: [[Die Schlümpfe]]
+* 1998: Et Cetera
+* 2000: [[Boppin'B]]
+* 2001: [[SCYCS]]
+* 2001: [[Boney NEM]]
+* 2003: [[Gorn Gul'do|Gul'do Gorn]] feat. Pomp & Brass
+* 2003: Modern Clubbing
+|
+* 2003: [[Bolenski Beat]]
+* 2004: [[P.R. Kantate]] pres. Ras Krass („U Me Heart“-nimel)
+* 2004: The Peers
+* 2006: [[Tomas Anders]]
+* 2006: [[Leningrad Cowboys]]
+* 2007: [[Soraja]]
+* 2008: [[Das Bo]] („Dumm aber schlau“-nimel)
+* 2010: [[Merzad Maraši]] („You're My Heart“-nimel)
+* 2010: [[Ešli Mark|Mark Ešli]]
+|}
+
 == Homaičendad ==
 <references />
 
