--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -16,7 +16,7 @@ Pajon uz' versii, '''«[[You're My Heart, You're My Soul '98]]»''', oli pästtu
 == Südäiolend ==
 Pajo om änetud [[evropop]]-, [[disko]]- da [[sintipop]]-žanroiš.
 
-«You're My Heart, You're My Soul» — tipine pajo kebnritmas; mugomad oli populärižed 80-žiš voziš. Se om [[armastuz|armastusen]] polhe, allegorižen koveritoman tekstanke.
+«You're My Heart, You're My Soul» — tipine pajo kebnritmas; mugomad oliba populärižed 80-žiš voziš. Se om [[armastuz|armastusen]] polhe, allegorižen koveritoman tekstanke.
 
 Pajon geroi — nor' mez', kudamban südäin palab himospäi i armastusespäi armasen neiččennoks. Hän laskese ičeze unikovihe, miše hamakan olda hänenke.
 
