--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -5,7 +5,7 @@ __NOTOC__
 
 Tekstan i muzikan tegii — [[Bolen Diter|Diter Bolen]] (hän oli Modern Talking:an ühtnii); siloi hän radoi ''Stiv Benson''-psevdonimal.<ref>http://www.bohlenworld.de/biography?language=en</ref>
 
-Kompozicii oli sur' satuz [[Evrop]]as. Pästandan aigen oli mödud enamb 8 millionad kopijad kaiked mail'madme.<ref>http://www.dw-world.de/dw/article/0,2144,776871,00.html</ref> Pajo oli ezmäižes sijas valdkundoiden rivin čartoiš (sidä kesken [[Saksanma]]s).<ref>http://www.musicline.de/de/chartverfolgung_summary/title/MODERN+TALKING/You%2527re+My+Heart%2Cyou%2527re+My+Soul/single</ref><ref>http://www.austriancharts.at/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref><ref>http://hitparade.ch/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
+Kompozicii oli sur' satuz [[Evrop]]as. Pästandan aigan oli mödud enamb 8 millionad kopijad kaiked mail'madme.<ref>http://www.dw-world.de/dw/article/0,2144,776871,00.html</ref> Pajo oli ezmäižes sijas valdkundoiden rivin čartoiš (sidä kesken [[Saksanma]]s).<ref>http://www.musicline.de/de/chartverfolgung_summary/title/MODERN+TALKING/You%2527re+My+Heart%2Cyou%2527re+My+Soul/single</ref><ref>http://www.austriancharts.at/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref><ref>http://hitparade.ch/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
 
 Saksanmas<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+TALKING/single</ref><ref>http://www.musikindustrie.de/gold_platin_datenbank/?action=suche&strTitel=You%27re+My+Heart%2C+You%27re+My+Soul&strInterpret=Modern+Talking&strTtArt=alle&strAwards=checked</ref> i [[Francii|Francijas]]<ref>http://www.infodisc.fr/S_ToutTemps.php?debut=250</ref> (mugažo — [[Bel'gii|Bel'gijas]], [[Portugalii|Portugalijas]], [[Ročinma]]s, [[Šveicarii|Šveicarijas]]<ref>http://www.dieter-bohlen.ru/dostizhen.php</ref>) singl oli kuldaine status, [[Suviafrik]]as oli platinaine (kahtišti), a [[Danii|Danijas]] — hobedaine.<ref>http://www.oocities.org/hollywood/Heights/8073/plat.html</ref> Mugažo pajo oli populärine [[NSTÜ]]:s.<ref>http://krivobokov.com.ua/stati/92-back-in-the-ussr.html</ref>
 
