--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -5,13 +5,13 @@ __NOTOC__
 
 Tekstan i muzikan tegii — [[Bolen Diter|Diter Bolen]] (hän oli Modern Talking:an ühtnii); siloi hän radoi ''Stiv Benson''-psevdonimal.<ref>http://www.bohlenworld.de/biography?language=en</ref>
 
-Kompozicii oli sur' satuz [[Evrop]]as. Pästandan aigan oli mödud enamb 8 millionad kopijad kaiked mail'madme.<ref>http://www.dw-world.de/dw/article/0,2144,776871,00.html</ref> Pajo oli ezmäižes sijas valdkundoiden rivin čartoiš (sidä kesken [[Saksanma]]s).<ref>http://www.musicline.de/de/chartverfolgung_summary/title/MODERN+TALKING/You%2527re+My+Heart%2Cyou%2527re+My+Soul/single</ref><ref>http://www.austriancharts.at/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref><ref>http://hitparade.ch/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
+Kompozicijal oli sur' satuz [[Evrop]]as. Pästandan aigan oli mödud enamb 8 millionad kopijad kaiked mail'madme.<ref>http://www.dw-world.de/dw/article/0,2144,776871,00.html</ref> Pajo oli ezmäižes sijas valdkundoiden riven čartoiš (sidä kesken [[Saksanma]]s).<ref>http://www.musicline.de/de/chartverfolgung_summary/title/MODERN+TALKING/You%2527re+My+Heart%2Cyou%2527re+My+Soul/single</ref><ref>http://www.austriancharts.at/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref><ref>http://hitparade.ch/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
 
-Saksanmas<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+TALKING/single</ref><ref>http://www.musikindustrie.de/gold_platin_datenbank/?action=suche&strTitel=You%27re+My+Heart%2C+You%27re+My+Soul&strInterpret=Modern+Talking&strTtArt=alle&strAwards=checked</ref> i [[Francii|Francijas]]<ref>http://www.infodisc.fr/S_ToutTemps.php?debut=250</ref> (mugažo — [[Bel'gii|Bel'gijas]], [[Portugalii|Portugalijas]], [[Ročinma]]s, [[Šveicarii|Šveicarijas]]<ref>http://www.dieter-bohlen.ru/dostizhen.php</ref>) singl oli kuldaine status, [[Suviafrik]]as oli platinaine (kahtišti), a [[Danii|Danijas]] — hobedaine.<ref>http://www.oocities.org/hollywood/Heights/8073/plat.html</ref> Mugažo pajo oli populärine [[NSTÜ]]:s.<ref>http://krivobokov.com.ua/stati/92-back-in-the-ussr.html</ref>
+Saksanmas<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+TALKING/single</ref><ref>http://www.musikindustrie.de/gold_platin_datenbank/?action=suche&strTitel=You%27re+My+Heart%2C+You%27re+My+Soul&strInterpret=Modern+Talking&strTtArt=alle&strAwards=checked</ref> i [[Francii|Francijas]]<ref>http://www.infodisc.fr/S_ToutTemps.php?debut=250</ref> (mugažo — [[Bel'gii|Bel'gijas]], [[Portugalii|Portugalijas]], [[Ročinma]]s, [[Šveicarii|Šveicarijas]]<ref>http://www.dieter-bohlen.ru/dostizhen.php</ref>) singlal oli kuldaine status, [[Suviafrik]]as oli platinaine (kahtišti), a [[Danii|Danijas]] — hobedaine.<ref>http://www.oocities.org/hollywood/Heights/8073/plat.html</ref> Mugažo pajo oli populärine [[NSTÜ]]:s.<ref>http://krivobokov.com.ua/stati/92-back-in-the-ussr.html</ref>
 
 Muzikklip om fil'mdud [[Lüksemburg]]as, [[1984]]-žes vodes.<ref>http://www.bohlenworld.de/biography?language=en</ref>
 
-Pajon uz' versii, '''«[[You're My Heart, You're My Soul '98]]»''', oli pästtud [[1998]]-žen voden [[16. keväz'ku|keväz'kun 16. päiväl]], kut singl «[[Back for Good]]»-al'bomaspäi. Se oli populärine mugažo, i mülüti äjiden evropaližiden valdkundoiden hitparadoihe.<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+TALKING/single</ref><ref>http://www.swisscharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul+%2798&cat=s</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980406&x=12&y=16</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980413&x=39&y=15</ref> Uz' singlan pästand linni platinaižeks Saksanmas<ref>http://www.musikindustrie.de/gold_platin_datenbank/?action=suche&strTitel=You%27re+My+Heart%2C+You%27re+My+Soul&strInterpret=Modern+Talking&strTtArt=alle&strAwards=checked</ref> da kuldaižeks Francijas<ref>http://www.disqueenfrance.com/fr/page-259165.xml?year=1998&type=7</ref>.
+Pajon uz' versii, '''«[[You're My Heart, You're My Soul '98]]»''', oli pästtud [[1998]]-žen voden [[16. keväz'ku|keväz'kun 16. päiväl]], kut singl «[[Back for Good]]»-al'bomaspäi. Se oli populärine mugažo, i mülüi äjiden evropaližiden valdkundoiden hitparadoihe.<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+TALKING/single</ref><ref>http://www.swisscharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul+%2798&cat=s</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980406&x=12&y=16</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980413&x=39&y=15</ref> Uz' singlan pästand linni platinaižeks Saksanmas<ref>http://www.musikindustrie.de/gold_platin_datenbank/?action=suche&strTitel=You%27re+My+Heart%2C+You%27re+My+Soul&strInterpret=Modern+Talking&strTtArt=alle&strAwards=checked</ref> da kuldaižeks Francijas<ref>http://www.disqueenfrance.com/fr/page-259165.xml?year=1998&type=7</ref>.
 
 == Südäiolend ==
 Pajo om änetud [[evropop]]-, [[disko]]- da [[sintipop]]-žanroiš.
