--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -49,7 +49,7 @@ Pajon geroi — nor' mez', kudamban südäin palab himospäi i armastusespäi ar
 * 1985: [[Roos Mari|Mari Roos]] („Ich bin stark nur mit dir“-nimel)
 * 1985: Creative Connection
 * 1985: Milchshake („Nur mit Quark wird man stark“-nimel)
-* 1985: Aleksa Leklr („Avec toi, contre toi“-nimel)
+* 1985: Aleksa Lekler („Avec toi, contre toi“-nimel)
 * 1985: Riku („Ota kii“-nimel)
 * 1985: [[Seija Simola]] („Ota kii“-nimel)
 * 1986: Maja-Katrin Fritše
