Давно смущало... спросил у Игоря

--- a/Morris_Trevor.mw
+++ b/Morris_Trevor.mw
@@ -1,4 +1,4 @@
-Kaik om kaks' tetabad ristitud '''Trevor Morris'''-nimel.
+Kaik om kaks' tetabad ristitud '''Trevor Morris'''-nimen al.
 * Britanijalaine futbolist [[Morris Trevor (futbolist)|Trevor Morris]]
 * Kanadalaine muzikankirjutai [[Morris Trevor (muzikankirjutai)|Trevor Morris]]
 {{t}}
