*Empty MediaWiki Message*

--- a/Valerija.mw
+++ b/Valerija.mw
@@ -1,4 +1,4 @@
-'''Valerija''' om naižiden nimi, tuleb [[Latinan kel'|latinan]] sanaspäi ''valeo'' — "olda tervhen". Sil om mugoi-žo tüvi, kuti mehiden nimel '''[[Velerii]]'''.
+'''Valerija''' om naižiden nimi, tuleb [[Latinan kel'|latinan]] sanaspäi ''valeo'' — "olda tervhen". Sil om mugoi-žo tüvi, kuti mehiden nimen al '''[[Valerii]]'''.
 
 == Nimen variantad toižil kelil ==
 
