*Empty MediaWiki Message*

--- a/Sennheiser.mw
+++ b/Sennheiser.mw
@@ -1,5 +1,5 @@
 [[Fail:Sennheiser HD650.jpg|thumb|right|250px|«Sennheiser HD650»-kundlimed]]
-'''«Sennheiser Electronic GmbH & Co. KG»''' om [[Saksanma|saksalaine]] kompanii, kulundelektrotehnikan tegii da satai. Tegeb [[1945]] vspäi [[Vedemark]]as «Labor W»-nimel.
+'''«Sennheiser Electronic GmbH & Co. KG»''' om [[Saksanma|saksalaine]] kompanii, kulundelektrotehnikan tegii da satai. Tegeb [[1945]] vspäi [[Vedemark]]as «Labor W»-nimen al.
 
 Kompanii om tetab kut hüväladuližiden [[kundlimed|kundlimiden]] da [[mikrofon]]oiden tegii.
 
