*Empty MediaWiki Message*

--- a/Lucky_Guy.mw
+++ b/Lucky_Guy.mw
@@ -1,4 +1,4 @@
-'''«Lucky Guy»''' (''Satusekaz priha'') om [[Bolen Diter|Diteran Bolenan]] pajo da ühtennimine singl (siloi hän om pästtud nece singl ''Rajan Simmons''-psevdonimal). Pajon tekst om [[anglijan kel'|anglijan kelel]].
+'''«Lucky Guy»''' (''Satusekaz priha'') om [[Bolen Diter|Diteran Bolenan]] pajo da ühtennimine singl (siloi hän om pästtud nece singl ''Rajan Simmons''-psevdoniman al). Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
 Om mugažo pästtud [[Modern Talking]]:an «[[The 1st Album]]»-al'bomas 1985-žel vodel.
 {{stub}}
