*Empty MediaWiki Message*

--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -3,7 +3,7 @@ __NOTOC__
 [[Fail:You're My Heart, You're My Soul (cover).jpeg|thumb|left|230px|Originaline singlankor']]
 '''«You're My Heart, You're My Soul»''' (''Sinä oled minun südäin, sinä oled minun heng'') om [[Modern Talking]]-kollektivan tetab pajo da ühtinnimine singl «[[The 1st Album]]»-al'bomas<ref>http://www.allmusic.com/album/r210962</ref>, kudamb om pästtud [[1984]]-žen voden [[29. reduku|redukun 29. päiväl]]<ref>http://www.modern-talking-online.de/singles.htm</ref>, [[BMG]]- da [[Hansa Records]]-leibloil.<ref>http://www.discogs.com/Modern-Talking-Youre-My-Heart-Youre-My-Soul/master/24417</ref> Se om gruppan debütine singl. Om änetud [[anglijan kel'|anglijan kelel]].
 
-Tekstan i muzikan tegii — [[Bolen Diter|Diter Bolen]] (hän oli Modern Talking:an ühtnii); siloi hän radoi ''Stiv Benson''-psevdonimal.<ref>http://www.bohlenworld.de/biography?language=en</ref>
+Tekstan i muzikan tegii — [[Bolen Diter|Diter Bolen]] (hän oli Modern Talking:an ühtnii); siloi hän radoi ''Stiv Benson''-psevdoniman al.<ref>http://www.bohlenworld.de/biography?language=en</ref>
 
 Kompozicijal oli sur' satuz [[Evrop]]as. Pästandan aigan oli mödud enamb 8 millionad kopijad kaiked mail'madme.<ref>http://www.dw-world.de/dw/article/0,2144,776871,00.html</ref> Pajo oli ezmäižes sijas valdkundoiden riven čartoiš (sidä kesken [[Saksanma]]s).<ref>http://www.musicline.de/de/chartverfolgung_summary/title/MODERN+TALKING/You%2527re+My+Heart%2Cyou%2527re+My+Soul/single</ref><ref>http://www.austriancharts.at/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref><ref>http://hitparade.ch/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
 
@@ -46,12 +46,12 @@ Pajon geroi — nor' mez', kudamban südäin palab himospäi i armastusespäi ar
 == Kaverad ==
 {|class="toptextcells"
 |
-* 1985: [[Roos Mari|Mari Roos]] („Ich bin stark nur mit dir“-nimel)
+* 1985: [[Roos Mari|Mari Roos]] („Ich bin stark nur mit dir“-nimen al)
 * 1985: Creative Connection
-* 1985: Milchshake („Nur mit Quark wird man stark“-nimel)
-* 1985: Aleksa Lekler („Avec toi, contre toi“-nimel)
-* 1985: Riku („Ota kii“-nimel)
-* 1985: [[Seija Simola]] („Ota kii“-nimel)
+* 1985: Milchshake („Nur mit Quark wird man stark“-nimen al)
+* 1985: Aleksa Lekler („Avec toi, contre toi“-nimen al)
+* 1985: Riku („Ota kii“-nimen al)
+* 1985: [[Seija Simola]] („Ota kii“-nimen al)
 * 1986: Maja-Katrin Fritše
 * 1989: [[Hamperdink Engel'bert (pajatai)|Engel'bert Hamperdink]]
 * 1993: [[In My Rosary|Derrière Le Miroir]]
@@ -67,13 +67,13 @@ Pajon geroi — nor' mez', kudamban südäin palab himospäi i armastusespäi ar
 * 2003: Modern Clubbing
 |
 * 2003: [[Bolenski Beat]]
-* 2004: [[P.R. Kantate]] pres. Ras Krass („U Me Heart“-nimel)
+* 2004: [[P.R. Kantate]] pres. Ras Krass („U Me Heart“-nimen al)
 * 2004: The Peers
 * 2006: [[Tomas Anders]]
 * 2006: [[Leningrad Cowboys]]
 * 2007: [[Soraja]]
-* 2008: [[Das Bo]] („Dumm aber schlau“-nimel)
-* 2010: [[Merzad Maraši]] („You're My Heart“-nimel)
+* 2008: [[Das Bo]] („Dumm aber schlau“-nimen al)
+* 2010: [[Merzad Maraši]] („You're My Heart“-nimen al)
 * 2010: [[Ešli Mark|Mark Ešli]]
 |}
 
