*Empty MediaWiki Message*

--- a/Garvud_Džuli.mw
+++ b/Garvud_Džuli.mw
@@ -1,6 +1,6 @@
 '''Džuli Garvud''' ([[anglijan kel'|angl.]]: ''Julie Garwood''; sünd. [[1944]], [[Kanzas Siti (Missuri)]], [[AÜV]]) om tetab amerikalaine kirjutai. Hän kirjutab [[armastuzroman|armastuz]]- da [[istorine roman|istorižed]] romanad.
 
-Mugažo hän kirjutab «Emili Čeiz» (Emily Chase)-psevdonimal.
+Mugažo hän kirjutab Emili Čeiz- (''Emily Chase'') psevdoniman al.
 {{stub}}
 
 [[Kategorii:Kirjutajad]]
