*Empty MediaWiki Message*

--- a/The_Night_Is_Yours_—_The_Night_Is_Mine.mw
+++ b/The_Night_Is_Yours_—_The_Night_Is_Mine.mw
@@ -1,4 +1,4 @@
-'''«The Night Is Yours — The Night Is Mine»''' (''Nece om sinun ö — nece om minun ö'') om [[Bolen Diter|Diteran Bolenan]] pajo da ühtennimine singl (siloi hän om pästtud nece singl ''Rajan Simmons''-psevdonimal). Pajon tekst om [[anglijan kel'|anglijan kelel]].
+'''«The Night Is Yours — The Night Is Mine»''' (''Nece om sinun ö — nece om minun ö'') om [[Bolen Diter|Diteran Bolenan]] pajo da ühtennimine singl (siloi hän om pästtud nece singl ''Rajan Simmons''-psevdoniman al). Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
 Om mugažo pästtud [[Modern Talking]]:an «[[The 1st Album]]»-al'bomas 1985-žel vodel.
 {{stub}}
