*Empty MediaWiki Message*

--- a/Jessica_Jay.mw
+++ b/Jessica_Jay.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = 
 }}
-'''„Jessica Jay“''' om [[Italii|italijalaine]] muzikaline projekt [[SAIFAM]]-leiblal vlspäi. 1992, [[Milan]]aspäi. „Džessika Džei“-psevdonimal pajatud kuverz'-se sessijanpajatajad. Kaikiš tetabamb pajo — „Casablanca“.
+'''„Jessica Jay“''' om [[Italii|italijalaine]] muzikaline projekt [[SAIFAM]]-leiblal vlspäi. 1992, [[Milan]]aspäi. „Džessika Džei“-psevdoniman al pajatud kuverz'-se sessijanpajatajad. Kaikiš tetabamb pajo — „Casablanca“.
 
 == Diskografii ==
 # ''Broken Hearted Woman'' (1996)
