ещё по простому предложению

--- a/2_Eivissa.mw
+++ b/2_Eivissa.mw
@@ -15,6 +15,8 @@
 }}
 '''«2 Eivissa»''' oli [[Saksanma|saksalaine]] evrodensgrupp [[Hamburg]]aspäi, [[1997]]. vlpäi [[2005]]. vhasai.
 
+Kaikiš tetabamb gruppan pajo — «[[Oh La La La (pajo)|Oh La La La]]».
+
 == Diskografii ==
 
 === Al'bomad ===
