*Empty MediaWiki Message*

--- a/The_Weather_Girls.mw
+++ b/The_Weather_Girls.mw
@@ -15,6 +15,8 @@
 }}
 '''«The Weather Girls»''' om [[AÜV|amerikalaine]] diskopopgrupp, vlspäi. [[1977]]. Tetab mülükund oli ''[[Armstid Izora|Izora Armstid]]'' da ''[[Uoš Marta|Marta Uoš]]''. Nügüdläižes mülükundas oma ''Dainell Rods'' da ''Ingrid Artur'', Armstidan tütred.
 
+Kaikiš tetabamb gruppan pajo — «[[It's Raining Men]]».
+
 == Diskografii ==
 
 === Al'bomad ===
