*Empty MediaWiki Message*

--- a/Secret_Service.mw
+++ b/Secret_Service.mw
@@ -15,6 +15,8 @@
 }}
 '''«Secret Service»''' om [[Ročinma|ročine]] muzikaline grupp [[Stokhol'm]]aspäi. Mülükund om [[Hokansson Ula|Ula Hokansson]], Tim Norell, Ul'f Valberg, Tonni Lindberg, Leif Paulsen da Leif Juhansson.
 
+Kaikiš tetabamb gruppan pajo — «10 O'Clock Postman».
+
 == Al'bomad ==
 * ''Oh Susie'' (1979)
 * ''Ye-Si-Ca'' (1981)
