*Empty MediaWiki Message*

--- a/Joy.mw
+++ b/Joy.mw
@@ -1,6 +1,8 @@
 [[Fail:Joy Band.jpg|pisi|250px|Joy]]
 '''«Joy»''' om [[Avstrii|avstrijalaine]] [[sintipop]]grupp. Mülükund om ''Freddi Jaklič'', ''Manfred Temmel<nowiki>'</nowiki>'' da ''Endi Švaicer''.
 
+Kaikiš tetabižiš gruppan pajod — «Touch By Touch» da «Valerie».
+
 == Diskografii ==
 
 === Al'bomad ===
