--- a/C._C._Catch.mw
+++ b/C._C._Catch.mw
@@ -21,7 +21,7 @@ Om «Diskon kunigaznaižen» oficialitoi titul. Hänen populärižendan pik oli 
 * ''[[Are You Man Enough]]'' (1987)
 * ''[[Soul Survivor]]'' (1987)
 * ''[[House of Mystic Lights]]'' (1988)
-* ''[[Backseat Of Your Cadillac]]'' (1988)
+* ''[[Backseat of Your Cadillac]]'' (1988)
 * ''[[Summer Kisses]]'' (1988)
 * ''[[Nothing But a Heartache]]'' (1989)
 * ''[[Baby I Need Your Love]]'' (1989)
