--- a/Soul_Survivor.mw
+++ b/Soul_Survivor.mw
@@ -1,6 +1,9 @@
 '''«Soul Survivor»''' (''Kolmatoi heng'') om [[C. C. Catch]]:an pajo da ühtinnimine singl «[[Like a Hurricane]]»-al'bomas, kudamb om pästtud [[1987]]-žes vodes.
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
+
+== Kacu mugažo ==
+* [[I Can Lose My Heart Tonight '99]]
 {{stub}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
