--- a/Soul_Survivor.mw
+++ b/Soul_Survivor.mw
@@ -3,7 +3,7 @@
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
 == Kacu mugažo ==
-* [[I Can Lose My Heart Tonight '99]]
+* [[Soul Survivor '98]]
 {{stub}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
