*Empty MediaWiki Message*

--- a/Soul_Survivor.mw
+++ b/Soul_Survivor.mw
@@ -5,6 +5,7 @@ Pajon tekst om [[anglijan kel'|anglijan kelel]].
 == Kacu mugažo ==
 * [[Soul Survivor '98]]
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
 [[Kategorii:C. C. Catch:an pajod]]
