*Empty MediaWiki Message*

--- a/Are_You_Man_Enough.mw
+++ b/Are_You_Man_Enough.mw
@@ -2,6 +2,7 @@
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
 [[Kategorii:C. C. Catch:an pajod]]
