--- a/Heartbreak_Hotel_(C._C._Catch-pajatajan_singl).mw
+++ b/Heartbreak_Hotel_(C._C._Catch-pajatajan_singl).mw
@@ -2,6 +2,7 @@
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
 [[Kategorii:C. C. Catch:an pajod]]
