--- a/Strangers_by_Night.mw
+++ b/Strangers_by_Night.mw
@@ -2,6 +2,7 @@
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
 [[Kategorii:C. C. Catch:an pajod]]
