--- a/'Cause_You_Are_Young.mw
+++ b/'Cause_You_Are_Young.mw
@@ -2,6 +2,7 @@
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
 [[Kategorii:C. C. Catch:an pajod]]
