--- a/I_Can_Lose_My_Heart_Tonight.mw
+++ b/I_Can_Lose_My_Heart_Tonight.mw
@@ -5,6 +5,7 @@ Pajon tekst om [[anglijan kel'|anglijan kelel]].
 == Kacu mugažo ==
 * [[I Can Lose My Heart Tonight '99]]
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
 [[Kategorii:C. C. Catch:an pajod]]
