*Empty MediaWiki Message*

--- a/Like_a_Hurricane.mw
+++ b/Like_a_Hurricane.mw
@@ -3,7 +3,7 @@
 == Pajoiden kirjutez ==
 # ''[[Good Guys Only Win in Movies]]'' (5:45)
 # ''Like a Hurricane'' (3:16)
-# ''Smoky Joe's Café'' (3:44)
+# ''[[Smoky Joe's Café]]'' (3:44)
 # ''[[Are You Man Enough]]'' (3:39)
 # ''Don't Be a Hero'' (3:35)
 # ''[[Soul Survivor]]'' (5:12)
@@ -11,6 +11,7 @@
 # ''Don't Wait Too Long'' (3:25)
 # ''Dancing in Shadows'' (3:36)
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:C. C. Catch:an al'bomad]]
