*Empty MediaWiki Message*

--- a/Welcome_to_the_Heartbreak_Hotel.mw
+++ b/Welcome_to_the_Heartbreak_Hotel.mw
@@ -12,6 +12,7 @@
 # ''Wild Fire'' (3:19)
 # ''Stop — Draggin' My Heart Around'' (3:53)
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:C. C. Catch:an al'bomad]]
