--- a/Catch_the_Catch.mw
+++ b/Catch_the_Catch.mw
@@ -4,12 +4,13 @@
 # ''[['Cause You Are Young]]'' (4:43)
 # ''[[I Can Lose My Heart Tonight]]'' (5:53)
 # ''You Shot a Hole In My Soul'' (5:15)
-# ''One Night's Not Enough'' (3:22)
+# ''[[One Night's Not Enough]]'' (3:22)
 # ''[[Strangers by Night]]'' (5:42)
 # ''Stay'' (5:47)
 # ''Jump In My Car'' (4:36)
 # ''You Can Be My Lucky Star Tonight'' (5:19)
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:C. C. Catch:n al'bomad]]
