*Empty MediaWiki Message*

--- a/C._C._Catch.mw
+++ b/C._C._Catch.mw
@@ -36,6 +36,7 @@ Om «Diskon kunigaznaižen» oficialitoi titul. Hänen populärižendan pik oli 
 * ''[[Silence]] (feat. Leela)'' (2004)
 * ''[[Unborn Love]]'' (2010)
 {{stub}}
+{{C. C. Catch}}
 
 [[Kategorii:Pajatajad kirjamišton mödhe]]
 [[Kategorii:Alamaiden pajatajad]]
