я всё же поменяю

--- a/Like_a_Hurricane.mw
+++ b/Like_a_Hurricane.mw
@@ -1,4 +1,4 @@
-'''«Like a Hurricane»''' (''Aniku torok'') om [[C. C. Catch]]:an 3. al'bom, pästtud [[1987]]. vodes.
+'''«Like a Hurricane»''' (''Aniku uragan'') om [[C. C. Catch]]:an 3. al'bom, pästtud [[1987]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''[[Good Guys Only Win in Movies]]'' (5:45)
