--- a/Kitai.mw
+++ b/Kitai.mw
@@ -26,4 +26,4 @@ Eläjiden lugu om 1,347,374,752 ristitud (2010). Pind om 9,596,960 km².
 Kitajan ohjandai om [[Si Сzin'pin]], päministr — [[Ven' Czäbao]].
 {{stub}}
 
-[[Kategorii:Kitai|*]]
+[[Kategorii:Kitai| ]]
