--- a/Singapur.mw
+++ b/Singapur.mw
@@ -26,4 +26,4 @@ Ohjastuz sijadase "Downtown Core":as — territorijas [[Keskuzrajon (Singapur)|K
 
 {{stub}}
 
-[[Kategorii:Singapur|*]]
+[[Kategorii:Singapur| ]]
