/* Grammatik */ → [[Vepsän kändod]]

--- a/Vepsän_kel'.mw
+++ b/Vepsän_kel'.mw
@@ -93,7 +93,7 @@ Painend om fiksiruidud (ezmäižhe tavuhu).
 == Grammatik ==
 
 === Nominad ===
-
+::→ [[Vepsän kändod]]
 Nimed (nominad) toižetase luguidme da kändoidme. 
 
 Vepsän keles om 23 vai 24 kändod (ku lugeda kändoks m.n. vanh prolativ ''-iči-''ozutajanke).
