--- a/Vepsän_Vikipedii.mw
+++ b/Vepsän_Vikipedii.mw
@@ -1,4 +1,4 @@
-[[Fail:Wikipedia-logo-v2-vep.svg|right]]
+[[Fail:Wikipedia-logo-v2-vep.svg|155px|thumb|Vepsän Vikipedijan logotip]]
 '''Vepsän Vikipedii''' ([[venäkel'|ven.]]: ''Вепсская Википедия'') om joudai enciklopedii [[Vepsän kel'|vepsän kelel]], [[Vikipedii|Vikipedijan]] vepsänkel'ne jaguz.
 
 Se om avaitud [[2012]]-nden voden [[uhoku]]l.
