--- a/Vikipedii.mw
+++ b/Vikipedii.mw
@@ -1,4 +1,4 @@
-[[Fail:Wikipedia-logo-v2-vep.svg|155px|right|thumb|[[Vepsän Vikipedii|Vepsän Vikipedijan]] logotip]]
+[[Fail:10 sharing book cover background.jpg|240px|pisi|Vikipedijan logotip]]
 '''Vikipedii''' ([[anglijan kel'|angl.]]: ''Wikipedia'') om [[Joudai südäiolend|joudai]], kaikile avaitud [[Äikel'žuz|äikel'ne]] [[Enciklopedii|universaline enciklopedii]], kudamban pid'oiteleb «[[Vikimedii|Vikimedii-fond]]». Nimi om sätud «[[viki]]»- (saitoiden sämižtehnilogii) da «[[enciklopedii]]»-sanoišpäi. Vikipedijas om enamb 21.000.000 kirjutusid<ref>[http://meta.wikimedia.org/wiki/List_of_Wikipedias List of Wikipedias]</ref>, kudambid kirjutadas ühtes [[Ičetahtnik|ičetahtnikad]] kaikiš mail'man tahoišpäi, i kaikuččele sab kirjutada da redaktiruida niid tugedusita. Vikipedijan ühtnijoid kuctas ''Vikipedistoikš''.
 
 == Kaikiš suremb Vikipedijad ==
