назвала Плутон астероидом

--- a/Päiväižen_sistem.mw
+++ b/Päiväižen_sistem.mw
@@ -2,9 +2,10 @@
 [[Fail:Solar system scale-2.jpg|thumb|400px|Päiväižen sisteman planetad]]
 '''Päiväižen sistem''' om planetoiden sistem, kudamban keskuztähtaz om [[Päiväine]]. Neche sistemha kaik objektad, kudambas punose Päiväižes ümbri.
 
-Sisteman päobjekt om [[Päiväine]] - G2V-[[spektraline klass|spektraližen klassan]] [[pakuine karlut]].
+Sisteman päobjekt om [[Päiväine]] — G2V-[[spektraline klass|spektraližen klassan]] [[pakuine karlut]].
 
-Päiväižen sistemha mülüb 8 planetad: [[Merkurii (planet)|Merkurii]], [[Vener (planet)|Vener]], [[Ma (planet)|Ma]], [[Mars (planet)|Mars]], [[Jupiter (planet)|Jupiter]], [[Saturn (planet)|Saturn]], [[Uran (planet)|Uran]] da [[Neptun (planet)|Neptun]]. [[Pluton (planet)|Pluton]] nügüd' (2006 vn. jäl'ghe) ei lugekoi jo todesižeks planetaks.
+Päiväižen sistemha mülüb 8 planetad: [[Merkurii (planet)|Merkurii]], [[Vener (planet)|Vener]], [[Ma (planet)|Ma]], [[Mars (planet)|Mars]], [[Jupiter (planet)|Jupiter]], [[Saturn (planet)|Saturn]], [[Uran (planet)|Uran]] da [[Neptun (planet)|Neptun]]. [[Pluton (asteroid)|Pluton]] nügüd' (2006 vn. jäl'ghe) ei lugekoi jo todesižeks planetaks.
 
 {{stub}}
+[[Kategorii:Päiväižen sistem|*]]
 [[Kategorii:Astronomii]]
