--- a/Küd.mw
+++ b/Küd.mw
@@ -1,4 +1,4 @@
-[[Fail:Snakes Diversity.jpg|thumb|right|250px|''[[Bitis arietans]]'']]
+[[Fail:Pofadder.JPG|thumb|right|250px|''[[Bitis arietans]]'']]
 '''Küd''' ([[latinan kel'|lat.]]: ''Serpentes'') oma [[reptilijad]].
 {{stub}}
 
