--- a/Küd.mw
+++ b/Küd.mw
@@ -3,6 +3,6 @@
 '''Küd''' ([[latinan kel'|lat.]]: ''Serpentes'') oma [[reptilijad]].
 {{stub}}
 
-[[Kategorii:Küd|*]]
+[[Kategorii:Küd| ]]
 [[Kategorii:Reptilijad]]
 [[Kategorii:Živatad kirjamišton mödhe]]
