*Empty MediaWiki Message*

--- a/Bitis_arietans.mw
+++ b/Bitis_arietans.mw
@@ -15,7 +15,7 @@
  | ncbi         = 8692
  | range map    = Bitis-arietans-range-map.png
 }}
-'''''Bitis arietans''''' om [[küd]].
+'''''Bitis arietans''''' om [[küd|kü]].
 
 == Galerei ==
 <gallery>
