--- a/Pil'ved.mw
+++ b/Pil'ved.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Cumulus clouds panorama.jpg|pisi|350px|Kogopil'ved Viktorii-štatas, [[Avstralii (valdkund)|Avstralijas]]]]
-'''Pil'ved''' ([[Venäkel'|venäkelel]]: ''Облака'') om suspenziruidut atmosferas [[Vezi|vezipurun]] koncentracijan produktad, kudambid voib nähta taivhal. Ned oma tobjimalaz troposferas. Pil'viden südäiolendha mülüb penikaižid tilkuižid vet da/vai jän kristalluzid (kut ''pil'venelementoid''). Konz il'man lämuz om ülemb -10&nbsp;°C, pil'viš om tilkuižid-pil'venelementoid, konz lämuz peneneb −10:späi −15:hesai °C, pil'vil om jo segoitadud südäiolend (tilkuižed da kristallad), a konz lämuz om alemb -15&nbsp;°C, — vaiše kristalluded. Ku pil'venelementad tobnetas, a niiden lanktendan piguz kazvaškandeb, ka ned lankteba pil'višpäi [[Atmosferižed sadeged|atmosferižin sadegin]] ([[lumi]], [[Wp/veo/Vihm|vihm]], [[ränd]], [[ragiž]] i m. e.). 
+'''Pil'ved''' ([[Venäkel'|venäkelel]]: ''Облака'') om suspenziruidut atmosferas [[Vezi|vezipurun]] koncentracijan produktad, kudambid voib nähta taivhal. Ned oma tobjimalaz troposferas. Pil'viden südäiolendha mülüb penikaižid tilkuižid vet da/vai jän kristalluzid (kut ''pil'venelementoid''). Konz il'man lämuz om ülemb -10&nbsp;°C, pil'viš om tilkuižid-pil'venelementoid, konz lämuz peneneb −10:späi −15:hesai °C, pil'vil om jo segoitadud südäiolend (tilkuižed da kristallad), a konz lämuz om alemb -15&nbsp;°C, — vaiše kristalluded. Ku pil'venelementad tobnetas, a niiden lanktendan piguz kazvaškandeb, ka ned lankteba pil'višpäi [[Atmosferižed sadeged|atmosferižin sadegin]] ([[lumi]], [[Vihm|vihm]], [[ränd]], [[ragiž]] i m. e.). 
 
 Pil'ved — tetab lirine mel'kuva, kudmban oma kävutanuded äjäd runokirjutajad (ozutsikš, venäläižed kirjutajad [[Aleksandr Puškin]], [[Gavriil Deržavin]]) ičeze sädusiš.
 
