*Empty MediaWiki Message*

--- a/Ku.mw
+++ b/Ku.mw
@@ -1,4 +1,4 @@
-'''Ku''' om [[agj]]an märičemižen ühtnik.
+'''Ku''' om [[aig]]an märičemižen ühtnik.
 
 Om kaks'toštkümne kud vodes:
 {| class="wikitable"
