--- a/Dežavü.mw
+++ b/Dežavü.mw
@@ -1,4 +1,4 @@
-'''Dežavü''' ([[Francijan kel'|franc.]] ''déjà vu'' — «nähtud jo») om psihine olend, kudamban aigan ristit rižab, miše hän om jo olnu konz-ni mugoižes situacijas.
+'''Dežavü''' ([[Francijan kel'|franc.]] ''déjà vu'' — «nähtud jo») om [[psihik|psihine]] olend, kudamban aigan [[ristit]] rižab, miše hän om jo olnu konz-ni mugoižes situacijas.
 
 {{stub}}
 
