*Empty MediaWiki Message*

--- a/Pil'ved.mw
+++ b/Pil'ved.mw
@@ -13,3 +13,4 @@ Pil'ved — tetab lirine mel'kuva, kudmban oma kävutanuded äjäd runokirjutaja
 {{stub}}
 
 [[Kategorii:Meteorologii]]
+[[Kategorii:Pil'ved|*]]
