--- a/Fly_To_The_Moon.mw
+++ b/Fly_To_The_Moon.mw
@@ -1,4 +1,6 @@
-'''«Fly To The Moon»''' (''Leta kudmaižeho'') om tetab pajo [[Modern Talking]]:an «[[Year of the Dragon]]»-al'bomas. Pajon tekst om [[anglijan kel'|anglijan kelel]].
+'''«Fly To The Moon»''' (''Leta kudmaižeho'') om pajo [[Modern Talking]]:an «[[Year of the Dragon]]»-al'bomas. Pajon tekst om [[anglijan kel'|anglijan kelel]].
+
+Pajo mülüi [[air play]]-čarthe [[Bolgarii|Bolgarijas]], i oli 17-žes sijas sijaližen hitparadas.
 {{stub}}
 {{Modern Talking}}
 
