*Empty MediaWiki Message*

--- a/The_1st_Album.mw
+++ b/The_1st_Album.mw
@@ -8,7 +8,7 @@
 # ''[[The Night Is Yours — The Night Is Mine]]'' (5:32)
 # ''[[Do You Wanna]]'' (4:24)
 # ''[[Lucky Guy]]'' (3:31)
-# ''One In a Million'' (3:43)
+# ''[[One In a Million]]'' (3:43)
 # ''Bells of Paris'' (4:16)
 {{stub}}
 {{Modern Talking}}
