*Empty MediaWiki Message*

--- a/America.mw
+++ b/America.mw
@@ -13,7 +13,7 @@
 # ''America'' (4:50)
 # ''For a Life Time'' (4:27)
 # ''From Coast to Coast'' (4:27)
-# ''There's Something in the Air'' (3:19)
+# ''[[There's Something in the Air]]'' (3:19)
 # ''[[I Need You Now]]'' (3:40)
 # ''[[New York City Girl]]'' (3:27)
 # ''Send Me a Letter from Heaven'' (3:54)
