*Empty MediaWiki Message*

--- a/Universe.mw
+++ b/Universe.mw
@@ -2,7 +2,7 @@
 
 == Pajoiden kirjutez ==
 # ''[[TV Makes the Superstar]]'' (3:44)
-# ''I'm No Rockefeller'' (3:40)
+# ''[[I'm No Rockefeller]]'' (3:40)
 # ''Mystery'' (3:32)
 # ''Everybody Needs Somebody'' (4:08)
 # ''Heart of an Angel'' (4:09)
